--- a/b-notes/src/Styles/LogGlobal.css
+++ b/b-notes/src/Styles/LogGlobal.css
@@ -30,6 +30,29 @@
   top: 200px;
 }
 
+.container {
+  width: 1200px;
+  height: auto;
+  margin: 0 auto;
+  display: grid;
+  grid-template-rows: repeat(auto-fit, minmax(280px, 1fr));
+  padding: 10px;
+}
+
+.container .parent-div {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  border: 2px solid rgb(245, 229, 88);
+  margin: 100px auto;
+  width: 550px;
+  padding: 50px;
+  flex-direction: row;
+  justify-content: space-around;
+  flex-flow: wrap;
+  border-radius: 5%;
+}
+
 .item-Head {
   width: auto;
   height: auto;
