--- a/b-notes/src/Styles/Main.css
+++ b/b-notes/src/Styles/Main.css
@@ -47,3 +47,20 @@
 .cerrar-sesion {
   margin-left: 590px;
 }
+
+.delete-button {
+  font-size: 16px;
+  width: 100px;
+  height: 40px;
+  transition: 0.8s;
+  border-radius: 10px;
+  border: 2px solid transparent;
+  background-color: rgb(231, 41, 35);
+  color: beige;
+}
+
+.delete-button:hover {
+  color: blue;
+  background: rgb(243, 241, 239);
+  border: 2px solid rgb(231, 41, 35);
+}
