se cambió la posición de los botones de like y dislike

--- a/b-notes/src/Styles/Main.css
+++ b/b-notes/src/Styles/Main.css
@@ -87,6 +87,10 @@
   text-align: start;
 }
 
+.post .buttons-container {
+  text-align: end;
+}
+
 .post .etiqueta {
   width: auto;
   height: auto;
